add slide functionality for mouse scroll and buttons

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <body>
 
     <div id="main">
-        <h1>GSAP Fulscreen Slider</h1>
+        <h1>Empower Your Performance</h1>
         <div class="content">
             <p>You can press <span>UP</span> <span>DOWN </span> on your keyboard or swipe up/down to navigate.
                 Mouse wheel works too.
             </p>
         </div>
         <div class="buttons">
-            <button class="next"></button>
-            <button class="prev"></button>
+            <button class="next" onclick="go(-1)"></button>
+            <button class="prev" onclick="go(1)"></button>
         </div>
     </div>
 
